@@ -6,6 +6,7 @@
 #    yt/server/master/cell_master/serialize.cpp - if the version differs, then the update should be done with master snapshots (+ --set-read-only).
 #    yt/server/node/tablet_node/serialize.cpp - if the version differs, then the update should be done with tablet cell recreation.
 
+* ifsmirnov: Fix forgotten chunk view in overwrite bulk insert. Update masters via snapshot.
 * shakurov: YT-13003. New dynconfig options. Update masters via snapshot.
 * levysotsky: Added float and json types. Update masters via snapshot.
 * gritukan: |Multiset| semantics changed. Update masters via snapshot.
